--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "mongoose": "^5.9.7",
     "normalize-url": "^5.0.0",
     "request": "^2.88.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
